--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -111,6 +111,37 @@ main {
     }
 }
 
+.pagination {
+    margin-bottom: 1.8rem;
+    font-size: 2.0rem;
+    line-height: 3.6rem;
+
+    a {
+        color: $font-color;
+        text-decoration: none;
+    }
+}
+
+.pagination__prev,
+.pagination__next {
+    display: none;
+}
+
+@media (#{$bp-larger-than-phablet}) {
+    .pagination__prev,
+    .pagination__next {
+        display: block;
+    }
+
+    .pagination__list {
+        text-align: center;
+    }
+
+    .pagination__next {
+        text-align: right;
+    }
+}
+
 .blog {
     padding: 3.6rem 0 1.8rem 0;
 }
