--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,25 +3,25 @@
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 1.8rem;
+  margin-bottom: $line-height;
   font-weight: 300;
 }
 
-h1 { font-size: 4.0rem; line-height: 5.4rem;  letter-spacing: -.1rem; }
-h2 { font-size: 3.6rem; line-height: 1; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 3.6rem;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 3.6rem; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.8rem;  letter-spacing: 0; }
+h1 { font-size: 4.0rem; line-height: ($line-height * 2);  letter-spacing: -.1rem; }
+h2 { font-size: 3.6rem; line-height: ($line-height * 2); letter-spacing: -.1rem; }
+h3 { font-size: 3.0rem; line-height: ($line-height * 2);  letter-spacing: -.1rem; }
+h4 { font-size: 2.4rem; line-height: $line-height; letter-spacing: -.08rem; }
+h5 { font-size: 1.8rem; line-height: $line-height;  letter-spacing: -.05rem; }
+h6 { font-size: 1.5rem; line-height: $line-height;  letter-spacing: 0; }
 
 // Larger than phablet
 @media (#{$bp-larger-than-phablet}) {
-  h1 { font-size: 5.0rem; line-height: 5.4rem; }
-  h2 { font-size: 4.2rem; line-height: 5.4rem; }
-  h3 { font-size: 3.6rem; line-height: 1; }
-  h4 { font-size: 3.0rem; line-height: 3.6rem; }
-  h5 { font-size: 2.4rem; line-height: 3.6rem; }
-  h6 { font-size: 1.5rem; line-height: 1.8rem; }
+  h1 { font-size: 5.0rem; line-height: ($line-height * 3); }
+  h2 { font-size: 4.2rem; line-height: ($line-height * 2); }
+  h3 { font-size: 3.6rem; line-height: ($line-height * 2); }
+  h4 { font-size: 3.0rem; line-height: ($line-height * 2); }
+  h5 { font-size: 2.4rem; line-height: $line-height; }
+  h6 { font-size: 1.5rem; line-height: $line-height; }
 }
 
 p {
