--- a/sass/components/_code.scss
+++ b/sass/components/_code.scss
@@ -5,7 +5,7 @@ code {
   padding: .2rem .5rem;
   margin: 0 .2rem;
   font-family: "Lucida Console", Monaco, monospace;
-  font-size: 1.0rem;
+  font-size: 1.2rem;
   white-space: nowrap;
   background: lighten($light-grey, 6.4%);
   border: 1px solid $light-grey;
@@ -15,7 +15,7 @@ code {
 
 pre > code {
   display: block;
-  padding: 1.8rem 1.5rem;
+  padding: ($line-height - .1) 1.5rem;
   white-space: pre;
-  line-height: 1.8rem;
+  line-height: $line-height;
 }
