--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -18,7 +18,8 @@ main {
         background-size: cover;
         background-position: center center;
         box-sizing: border-box;
-        height: 36rem;
+        color: #fff;
+        height: 48rem;
         margin-bottom: 0;
         padding-top: 9rem;
         text-align: center;
@@ -29,7 +30,7 @@ main {
     background: $primary-color;
     color: rgba(255, 255, 255, 0.75);
     text-align: center;
-    padding: 3.6rem 0 1.8rem 0;
+    padding: $line-height 0 0 0;
 
     .button {
         border-color: #fff;
@@ -43,17 +44,16 @@ main {
 
 .about__subline {
     font-size: 1.5rem;
-    line-height: 1.8rem;
+    line-height: $line-height;
     margin-bottom: 0;
 }
 
 .projects {
-    padding: 3.6rem 0 0 0;
+    padding: $line-height 0 0 0;
 }
 
 .projects__text {
     text-align: center;
-    padding-bottom: 1.8rem;
 }
 
 .projects__list {
@@ -112,9 +112,9 @@ main {
 }
 
 .pagination {
-    margin-bottom: 1.8rem;
+    margin-bottom: $line-height;
     font-size: 2.0rem;
-    line-height: 3.6rem;
+    line-height: $line-height;
 
     a {
         color: $font-color;
@@ -143,19 +143,19 @@ main {
 }
 
 .blog {
-    padding: 3.6rem 0 1.8rem 0;
+    padding: $line-height 0 0 0;
 }
 
 .blog__intro {
     text-align: center;
-    padding-bottom: 1.8rem;
+    padding-bottom: 0;
 }
 
 .blog__post {
     figure {
         overflow: hidden;
         border-radius: $global-radius;
-        margin: 0 0 1.8rem 0;
+        margin: 0 0 $line-height 0;
     }
 
     img {
