--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     background: $dark-grey;
     color: $light-grey;
-    padding: 3.6rem 0 1.8rem 0;
+    padding: $line-height 0;
 
     h4 {
         color: #fff;
@@ -39,13 +39,13 @@ footer {
 
 .footer__made {
     border-top: 0.1rem solid $light-grey;
-    padding-top: 1.7rem;
+    padding-top: ($line-height - 0.1);
     text-align: center;
 }
 
 @media (#{$bp-larger-than-phablet}) {
     .footer__made p {
         font-size: 2.2rem;
-        line-height: 3.6rem;
+        line-height: ($line-height);
     }
 }
