--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,7 @@
 header {
     background: $dark-grey;
     color: #fff;
-    margin-bottom: 1.8rem;
-    padding-top: 1.8rem;
+    margin-bottom: $line-height;
 }
 
 .header--homepage {
@@ -12,6 +11,7 @@ header {
 .header__logo h2 {
     color: $primary-color;
     display: inline-block;
+    margin-bottom: 0;
 
     .header--homepage & {
         color: #fff;
@@ -22,7 +22,8 @@ header {
     float: right;
     color: #fff;
     padding: 0.2rem 1.0rem;
-    border-color: $light-grey;
+    border: 0;
+    margin-bottom: 0;
 
     &:hover,
     &:active {
@@ -33,14 +34,11 @@ header {
 .header__nav {
     display: none;
     transition: 0.5s ease;
+    margin-top: $line-height;
 }
 
 .header__nav--expanded {
     display: block;
-
-    .header--homepage & {
-        background: transparentize($dark-grey, 0.7);
-    }
 }
 
 .header__nav-list {
@@ -84,6 +82,7 @@ header {
 
     .header__nav {
         display: block;
+        margin-top: 0;
     }
 
     .header__nav-list {
@@ -94,7 +93,7 @@ header {
     .header__nav-item--active {
         display: inline;
         font-size: 2.4rem;
-        line-height: 5.4rem;
+        line-height: ($line-height * 2);
         margin-bottom: 0;
 
         a {
