Add search result page template
Also include list item template introduced in commit `737c866`.

--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -12,16 +12,7 @@
         <section class="eight columns">
             {{ page.content }}
         {% for article in page.collection %}
-            {% set header_image = article.media.images|first %}
-            <article class="blog__post">
-                <a href="{{ article.url }}" class="blog__post-link">
-                    <h3>{{ article.title }}</h3>
-                    <p class="blog__post-meta">{{ article.date|date('d, F Y') }}</p>
-            {% if header_image %}
-                    <figure><img src="{{ header_image.url }}" alt="{{ article.title|e('html') }}"></figure>
-            {% endif %}
-                </a>
-            </article>
+            {% include 'partials/bloglist_item.html.twig' with {'article': article} %}
         {% endfor %}
         </section>
         <aside class="four columns">
