Modify base partial template
Add new block `bottom` for custom JS set by extending templates. Also
add a main.js file which is loaded by the base partial every time.

--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -44,14 +44,10 @@
         </div>
 {% block javascripts %}
         {% do assets.addJs('//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js', 101) %}
+        {% do assets.addJs('theme://js/main.js', 100) %}
 {% endblock %}
         {{ assets.js() }}
-        <script>
-            $(document).ready(function () {
-                $('.js-toggle-nav').on('click', function () {
-                    $('.header__nav').toggleClass('header__nav--expanded');
-                });
-            });
-        </script>
+{% block bottom %}
+{% endblock %}
     </body>
 </html>
