Move footer template from modular to partials dir

--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -39,7 +39,7 @@
 {% endblock %}
             </main>
             <footer>
-                {% include 'modular/footer.html.twig' %}
+                {% include 'partials/footer.html.twig' %}
             </footer>
         </div>
 {% block javascripts %}
