--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -7,15 +7,16 @@
         <nav class="four columns footer__nav">
             <h4>Quick links</h4>
             <ul class="footer__nav-list">
-{% for module in site.quicklinks %}
-                <li class="footer__nav-item"><a href="{% if 'base_url:' in module.url %}{{ base_url_absolute }}/{{ module.url|replace({'base_url:': ''}) }}{% else %}{{ module.url }}{% endif %}">{{  module.text }}</a></li>
+{% for module in config.theme.quicklinks %}
+    {% set target = page.find(module.page) %}
+                <li class="footer__nav-item"><a href="{{ target.url }}">{{ target.title }}</a></li>
 {% endfor %}
             </ul>
         </nav>
         <nav class="four columns footer__nav">
             <h4>Connect</h4>
             <ul class="footer__nav-list">
-{% for social in site.social %}
+{% for social in config.theme.social %}
                 <li class="footer__nav-item">
                     <a href="{{ social.url }}"><i class="fa fa-{{ social.icon }}"></i> {{ social.name }}</a>
                 </li>
@@ -24,6 +25,6 @@
         </nav>
     </div>
     <div class="footer__made">
-        <p>{{ site.bottom_line }}</p>
+        <p>{{ config.theme.bottom_line }}</p>
     </div>
 </div>
